# analysator-backends

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  install.sh  pyproject.toml
.github/workflows/: release.yml  rust.yml  testpackage_reader.yml
cpphelpers/: CMakeLists.txt
cpphelpers/src/: cpphelpers.cpp
fortran_bindings/: vlsvrs.f90
rust/: README.md  build.rs
rust/c_bindings/include/: vlsvrs.h
rust/src/: vlsv_reader.rs
src/: vlsv_reader.rs
testpackage/: bulk_hermite_compressed.0000001.vlsv  testpackage_vlsvread.py
vis/: 3d_particle.py  fancy.py
