[package]
name = "vlsvrs"
version = "0.9.7"
edition = "2024"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/kstppd/vlsvrs"
description = "VLSV reader with C and Python bindings"
keywords = ["vlasiator","vlsv","plasma","vdf","hpc"]
categories = ["simulation","parsing","data-structures"]

[build-dependencies]
cmake = "0.1"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"],optional=true }
libc = "0.2.180"
memmap2 = "0.9.9"
ndarray = "0.16.1"
num-traits = "0.2.19"
numpy = { version = "0.25.0", optional = true }
once_cell = "1.21.3"
pyo3 = {version="0.25.1",features =["extension-module"],optional=true}
rand = {version= "0.9.2",features=["std"],optional=true}
rand_distr = {version= "0.5.1",optional=true}
raylib = { version = "5.5.1", optional = true } 
rayon =  {version="1.11.0",optional=true}
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
futures = {version="0.3", optional=true}
tokio-uring = { version = "0.4", optional = true }

[[bin]]
name="vlsv_dump"
path="src/vlsv_dump.rs"
required-features = ["vlsv_dump"]  

[[bin]]
name="vlsv_ptr"
path="src/vlsv_ptr.rs"
required-features = ["vlsv_ptr"]

[[bin]]
name="vlsv_particle_sampler"
path="src/restart_particle_sampler.rs"
required-features = ["vlsv_ptr"]

[[bin]]
name="vlsv_ptr_gc2d"
path="src/vlsv_ptr_gc2d.rs"
required-features = ["vlsv_ptr"]   

[[bin]]
name="vlsv_view"
path="src/vlsv_view.rs"
required-features = ["vlsv_view"]  

[lib]
name = "vlsvrs"
path = "src/vlsv_reader.rs"
crate-type = ["staticlib", "cdylib","rlib"]

[features]
default = []
with_bindings = ["dep:pyo3","dep:rayon", "dep:numpy","dep:tokio-uring","dep:futures"]
uring = ["dep:tokio-uring", "dep:futures"]
vlsv_view = ["dep:raylib"]
vlsv_ptr = ["dep:rayon","dep:rand","dep:rand_distr"]
vlsv_dump = ["dep:clap"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
