[package]
name = "vlsvrs"
version = "0.9.9"
edition = "2024"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/kstppd/vlsvrs"
description = "VLSV reader with C and Python bindings"
keywords = ["vlasiator","vlsv","plasma","vdf","hpc"]
categories = ["simulation","parsing","data-structures"]
exclude = [
    "target/*",
]

[build-dependencies]
cmake = "0.1"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
libc = "0.2.180"
memmap2 = "0.9.9"
ndarray = "0.16.1"
num-traits = "0.2.19"
numpy = { version = "0.25.0", optional = true }
once_cell = "1.21.3"
pyo3 = {version="0.25.1",features =["extension-module"],optional=true}
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"

[lib]
name = "vlsvrs"
path = "src/vlsv_reader.rs"
crate-type = ["staticlib", "cdylib","rlib"]

[features]
default = []
with_bindings = ["dep:pyo3", "dep:numpy"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
rpath = true
